--- a/index.html
+++ b/index.html
@@ -1,1 +1,59 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Freedom Play Hub</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #111;
+      color: #fff;
+      margin: 0;
+      padding: 20px;
+      text-align: center;
+    }
+    h1 {
+      color: #00ffcc;
+    }
+    .game-container {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 20px;
+      margin-top: 30px;
+    }
+    .game-card {
+      background: #222;
+      padding: 20px;
+      border-radius: 12px;
+      transition: transform 0.3s;
+      box-shadow: 0 0 10px #00ffcc88;
+    }
+    .game-card:hover {
+      transform: scale(1.05);
+      box-shadow: 0 0 20px #00ffcc;
+    }
+    .game-card a {
+      text-decoration: none;
+      color: #fff;
+      font-size: 1.2em;
+    }
+  </style>
+</head>
+<body>
+  <h1>🎮 Freedom Play Hub 🎮</h1>
+  <p>Enjoy mini games made just for you!</p>
+  <div class="game-container">
+    <div class="game-card">
+      <a href="games/tictactoe.html">Tic Tac Toe</a>
+    </div>
+    <div class="game-card">
+      <a href="games/colorclicker.html">Color Clicker</a>
+    </div>
+    <div class="game-card">
+      <a href="games/memory.html">Memory Game</a>
+    </div>
+  </div>
+</body>
+</html>
 
