--- a/index.html
+++ b/index.html
@@ -1,59 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Freedom Play Hub</title>
+  <meta charset="UTF-8" />
+  <title>Freedom Play Hub 🎮</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background: #111;
+      font-family: 'Segoe UI', sans-serif;
+      background: linear-gradient(to right, #1c1c1c, #292929);
       color: #fff;
-      margin: 0;
-      padding: 20px;
       text-align: center;
+      padding: 40px;
     }
+
     h1 {
-      color: #00ffcc;
+      font-size: 3rem;
+      margin-bottom: 10px;
     }
-    .game-container {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 20px;
-      margin-top: 30px;
+
+    p {
+      font-size: 1.2rem;
+      color: #ccc;
     }
-    .game-card {
-      background: #222;
-      padding: 20px;
+
+    .game-links {
+      margin-top: 40px;
+      display: flex;
+      justify-content: center;
+      gap: 30px;
+      flex-wrap: wrap;
+    }
+
+    .game-links a {
+      padding: 20px 30px;
+      font-size: 1rem;
+      background-color: #00bcd4;
+      color: white;
       border-radius: 12px;
-      transition: transform 0.3s;
-      box-shadow: 0 0 10px #00ffcc88;
-    }
-    .game-card:hover {
-      transform: scale(1.05);
-      box-shadow: 0 0 20px #00ffcc;
-    }
-    .game-card a {
       text-decoration: none;
-      color: #fff;
-      font-size: 1.2em;
+      transition: background 0.3s ease;
+    }
+
+    .game-links a:hover {
+      background-color: #0097a7;
+    }
+
+    footer {
+      margin-top: 60px;
+      font-size: 0.9rem;
+      color: #888;
     }
   </style>
 </head>
 <body>
-  <h1>🎮 Freedom Play Hub 🎮</h1>
-  <p>Enjoy mini games made just for you!</p>
-  <div class="game-container">
-    <div class="game-card">
-      <a href="games/tictactoe.html">Tic Tac Toe</a>
-    </div>
-    <div class="game-card">
-      <a href="games/colorclicker.html">Color Clicker</a>
-    </div>
-    <div class="game-card">
-      <a href="games/memory.html">Memory Game</a>
-    </div>
+  <h1>Welcome to Freedom Play Hub 🕹️</h1>
+  <p>Enjoy mini-games built with HTML, CSS, and JavaScript</p>
+
+  <div class="game-links">
+    <a href="tictactoe.html">Play Tic Tac Toe</a>
+    <a href="snake.html">Play Snake Game</a>
+    <a href="flappy.html">Play Flappy Bird</a>
   </div>
+
+  <footer>
+    Created by Shashank Singh © 2025
+  </footer>
 </body>
 </html>
-
